fixed a z-index issue with IE in A1.4
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/branches/1.4@2535 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a.css
+++ b/web/css/a.css
@@ -3049,6 +3049,7 @@ position: relative;
 float: left;
 width: 100%;
 margin-bottom: 10px !important;
+z-index: 999;
 }
 
 .a-area.singleton ul.a-controls.a-area-controls
